# PureDarwin

./: .gitignore  CMakeLists.txt  build.nix  flake.nix  image.nix  kc.nix  migcom.nix  native-ld.nix  ncurses.nix  result-1  result-2  result-3  startx.nix  toolchain.nix  toybox.nix  unifdef.nix  xeyes.nix  xorg-cross-lib.nix  xorg.nix  xvfb-fonts.nix  xvfb-freetype.nix  xvfb-libxcvt.nix  xvfb-pixman.nix  xvfb-stub-lib.nix  xvfb-xkbcomp.nix  xvfb-zlib.nix  xvfb.nix  zsh.nix
projects/libapfsrw/: CMakeLists.txt  README.md
projects/libapfsrw/include/apfsrw/: apfsrw.h
projects/libapfsrw/src/: apfsrw.c
projects/libapfsrw/tools/: apfsrw.c
src/: CMakeLists.txt
src/Kernel/: CMakeLists.txt
src/Kernel/Extensions/: CMakeLists.txt
src/Kernel/Extensions/AppleAPIC/: AppleAPIC.cpp
src/Kernel/Extensions/AppleFileSystemDriver/: AppleFileSystemDriver.cpp  CMakeLists.txt  Info.plist
src/Kernel/Extensions/AppleI386GenericPlatform/: AppleI386CPU.cpp  AppleI386PlatformExpert.cpp  AppleI386PlatformExpert.h  CMakeLists.txt  Info.plist
src/Kernel/Extensions/AppleI386PCI/: AppleI386AGP.cpp  AppleI386AGP.h  AppleI386PCI.cpp  AppleI386PCI.h  CMakeLists.txt  Info.plist
src/Kernel/Extensions/AppleIntelPIIXATA/: AppleIntelPIIXPATA.cpp  CMakeLists.txt
src/Kernel/Extensions/ApplePS2Controller/: ApplePS2Controller.cpp  ApplePS2Keyboard.cpp  ApplePS2Keyboard.h  ApplePS2KeyboardMap.h  CMakeLists.txt  Info.plist
src/Kernel/Extensions/Ext4FileSystemDriver/: CMakeLists.txt  Ext4FileSystemDriver.cpp  Ext4FileSystemDriver.h  Info.plist
src/Kernel/Extensions/HFSEncodings/: CMakeLists.txt  Info.plist
src/Kernel/Extensions/IOATABlockStorage/: CMakeLists.txt  IOATABlockStorageDevice.cpp  IOATABlockStorageDriver.cpp  IOATABlockStorageDriver.h  IOATAStorageDefines.h  Info.plist
src/Kernel/Extensions/IOATAFamily/: ATADeviceNub.cpp  CMakeLists.txt  IOATAController.cpp
src/Kernel/Extensions/IOGOPFramebuffer/: CMakeLists.txt  IOGOPFramebuffer.cpp  IOGOPFramebuffer.h  Info.plist
src/Kernel/Extensions/IOGraphicsFamily/: CMakeLists.txt  IODisplayWrangler.cpp  IOFramebuffer.cpp  IOGraphicsKTrace.h
src/Kernel/Extensions/IOHIDFamily/: CMakeLists.txt  Info.plist
src/Kernel/Extensions/IONVMEFamily/: CMakeLists.txt  IONVMEController.cpp  IONVMEController.h  IONVMEDisk.cpp  IONVMEDisk.h  Info.plist
src/Kernel/Extensions/IONetworkingFamily/: CMakeLists.txt  IONetworkStack.cpp  Info.plist
src/Kernel/Extensions/IOPCIFamily/: CMakeLists.txt  IOPCIBridge.cpp  IOPCIMessagedInterruptController.cpp  IOPCIRange.cpp
src/Kernel/Extensions/IOStorageFamily/: CMakeLists.txt  IOGUIDPartitionScheme.cpp  IOMediaBSDClient.cpp  Info.plist
src/Kernel/Extensions/IOUSBFamily/: CMakeLists.txt  Info.plist
src/Kernel/Extensions/MiniRV32IMA/: CMakeLists.txt  Info.plist  MiniRV32IMA.c
src/Kernel/Extensions/PDE1000/: CMakeLists.txt  Info.plist  PDE1000.cpp  PDE1000.h
src/Kernel/Extensions/RavynAHCIPort/: AHCI.h  CMakeLists.txt  Info.plist  RavynAHCIDisk.cpp  RavynAHCIDisk.h  RavynAHCIPort.cpp  RavynAHCIPort.h
src/Kernel/Extensions/RavynHDAudio/: CMakeLists.txt  Info.plist  RavynHDAudio.cpp  RavynHDAudio.h
src/Kernel/Extensions/RavynXHCIPort/: CMakeLists.txt  Info.plist  RavynXHCIKeyboard.cpp  RavynXHCIKeyboard.h  RavynXHCIMassStorageDisk.cpp  RavynXHCIMassStorageDisk.h  RavynXHCIMouse.cpp  RavynXHCIMouse.h  RavynXHCIPort.cpp  RavynXHCIPort.h  RavynXHCIUSBBus.cpp  RavynXHCIUSBBus.h  XHCI.h
src/Kernel/Extensions/apfs/: CMakeLists.txt  (+6 more)
src/Kernel/xnu/: CMakeLists.txt  Makefile
src/Libraries/: CMakeLists.txt
src/Libraries/AvailabilityVersions/: CMakeLists.txt
src/Libraries/CommonCrypto/: host_commoncrypto_static.cmake
src/Libraries/CoreFoundation/: CMakeLists.txt
src/Libraries/CrashReporterClient/: CMakeLists.txt
src/Libraries/IOKit/: CMakeLists.txt  IOKitLib.c  IOKitLibCF.c
src/Libraries/PDGOP/: CMakeLists.txt  PDGOP.c
src/Libraries/clang_bootstrap/: stdatomic.h
src/Libraries/dyld/: CMakeLists.txt  dyld_sdk_compat.h  pd_dyld_internal_stubs.cpp  pd_fileutils.cpp  pd_libc_common_storage.c  pd_stubs.c
src/Libraries/libSystem/: CMakeLists.txt
src/Libraries/libcxxabi/: CMakeLists.txt
src/Libraries/libresolv/: CMakeLists.txt  pd_dns_sd_stub.c  pd_dnsinfo_stub.c  pd_getaddrinfo.c  pd_net_compat.c  pd_notify_stub.c  pd_res_compat.c  pd_res_state.c
src/Userspace/: CMakeLists.txt
src/Userspace/busybox/: CMakeLists.txt  apply-minimal-config.cmake  busybox-minimal.config  finalize-config.sh
src/Userspace/diskdev_cmds/: CMakeLists.txt  mount.c  umount.c
src/Userspace/ext4tool/: CMakeLists.txt  ext4tool.c
src/Userspace/fbdoom/: CMakeLists.txt  i_input_pd.c  i_music_pd.c  i_sound_pd.c  i_video_pd.c
src/Userspace/fbtri/: CMakeLists.txt  fbtri.c
src/Userspace/helloapp/: CMakeLists.txt  helloapp.c
src/Userspace/iokittest/: CMakeLists.txt  iokittest.c  ioreg.c
src/Userspace/ioreg/: term_stub.c
src/Userspace/launchd/: CMakeLists.txt  init.c
src/Userspace/launchd-dummy/: CMakeLists.txt  README.md  launchd.c
src/Userspace/malloctest/: CMakeLists.txt  malloctest.c
src/Userspace/mousemon/: CMakeLists.txt  mousemon.c
src/Userspace/msdosfstest/: CMakeLists.txt  msdosfstest.c
src/Userspace/netsetup/: CMakeLists.txt  netsetup.c
src/Userspace/pcmplay/: CMakeLists.txt  pcmplay.c
src/Userspace/ping/: CMakeLists.txt  ping.c
src/Userspace/ps/: CMakeLists.txt  ps.c
src/Userspace/shell_cmds/: CMakeLists.txt  chown.c  nohup.c  passwd.c
src/Userspace/sockettest/: CMakeLists.txt  sockettest.c
src/Userspace/startx/: CMakeLists.txt  startx.c
src/Userspace/sw_vers/: CMakeLists.txt  sw_vers.c
src/Userspace/system_cmds/: CMakeLists.txt  mkfile.c  pd_shutdown.c  sync.c  sysctl.c
src/Userspace/tcc/: CMakeLists.txt  patch-tcc.cmake
src/Userspace/text_cmds/: CMakeLists.txt
src/Userspace/xf86-input-puredarwin/: CMakeLists.txt  puredarwininput_drv.c  puredarwininput_drv.exports
src/Userspace/xf86-video-puredarwingop/: CMakeLists.txt  puredarwingop_drv.c  puredarwingop_drv.exports
tools/iig-selfhost/: CMakeLists.txt
tools/mig/: CMakeLists.txt  mig.sh
tools/unifdef/: CMakeLists.txt
(+506 files in other folders)
