add_subdirectory(AvailabilityVersions)
add_subdirectory(architecture)
add_subdirectory(CrashReporterClient)
add_subdirectory(CommonCrypto)
add_subdirectory(clang_bootstrap)
add_subdirectory(libSystem)
add_subdirectory(libcxxabi)
add_subdirectory(dyld)
add_subdirectory(IOKit)
add_subdirectory(PDGOP)
