add_subdirectory(helloapp)
add_subdirectory(launchd)
add_subdirectory(sw_vers)
add_subdirectory(ps)
add_subdirectory(system_cmds)
option(PUREDARWIN_ENABLE_TCC "Build TinyCC for the PureDarwin userspace" OFF)
if(PUREDARWIN_ENABLE_TCC)
    add_subdirectory(tcc)
endif()
add_subdirectory(fbtri)
add_subdirectory(malloctest)
add_subdirectory(sockettest)
add_subdirectory(netsetup)
add_subdirectory(ping)
add_subdirectory(iokittest)
add_subdirectory(mousemon)
add_subdirectory(msdosfstest)
add_subdirectory(diskdev_cmds)
add_subdirectory(xf86-video-puredarwingop)
add_subdirectory(xf86-input-puredarwin)
