add_subdirectory(launchd)
add_subdirectory(sw_vers)
add_subdirectory(ps)
add_subdirectory(system_cmds)
add_subdirectory(shell_cmds)
add_subdirectory(text_cmds)
option(PUREDARWIN_ENABLE_TCC "Build TinyCC for the PureDarwin userspace" OFF)
if(PUREDARWIN_ENABLE_TCC)
    add_subdirectory(tcc)
endif()
add_subdirectory(netsetup)
add_subdirectory(ping)
add_subdirectory(pcmplay)
add_subdirectory(startx)
add_subdirectory(mousemon)
add_subdirectory(diskdev_cmds)
add_subdirectory(ext4tool)
add_subdirectory(xf86-video-puredarwingop)
add_subdirectory(xf86-input-puredarwin)
option(PUREDARWIN_ENABLE_FBDOOM "Build fbDOOM (GPL, external source required) for the PureDarwin userspace" OFF)
add_subdirectory(fbdoom)
