if(NOT PUREDARWIN_ARM64)
    add_subdirectory(AppleAPIC)
    add_subdirectory(AppleI386GenericPlatform)
    add_subdirectory(AppleI386PCI)
    add_subdirectory(AppleIntelPIIXATA)
    add_subdirectory(ApplePS2Controller)
    add_subdirectory(IOACPIFamily)
    add_subdirectory(IOATAFamily)
    add_subdirectory(IOATABlockStorage)
endif()

add_subdirectory(IOPCIFamily)
add_subdirectory(IOStorageFamily)
add_subdirectory(RavynAHCIPort)
add_subdirectory(IOGOPFramebuffer)
add_subdirectory(IOHIDFamily)
add_subdirectory(corecrypto)
add_subdirectory(ext4)
add_subdirectory(HFSEncodings)
add_subdirectory(hfs)
add_subdirectory(AppleFileSystemDriver)
add_subdirectory(pthread)